forgot about the front, as one does

--- a/templates/main.html
+++ b/templates/main.html
@@ -2,8 +2,8 @@
 
 {% block content %}
  <article>
- 	<h2>Thing</h2>
- 	<p>Things</p>
+ 	<h2>One Day...</h2>
+ 	<p>something might be here</p>
   </article>
    
 {% endblock %}
