--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
 	<div class="wrapper">
 		<header>
 			<!-- header -->
-			<h1 class="logo"><a href="">Title</a></h1>
+			<h1 class="logo"><a href="">Horriblescope</a></h1>
 			
 		</header>
 			<!-- content -->
@@ -22,7 +22,7 @@
 		<footer>
 			<!-- footer -->
 			
-			things
+			like this? Tweet about it: #horriblescopes
 		</footer>
 	</div> <!-- end of wrapper -->
 </body>
