--- a/templates/main.html
+++ b/templates/main.html
@@ -2,8 +2,21 @@
 
 {% block content %}
  <article>
- 	<h2>One Day...</h2>
- 	<p>something might be here</p>
+ 	<h2>What?</h2>
+ 	<p>A twitter bot that tweets terrible horrorscopes at you.</p>
+  </article>
+
+  <article>
+  	<h2>Why?</h2>
+  	<p>Why not? I'm sure a lot of internet oracles are getting tired of giving out readings.</p>
+  </article>
+
+  <article>How?</article>
+  <p>Simply tweet something like: "I would like a reading. I'm a Taurus" to [twitter link]. And horriblescope will answer you. </p>
+
+  <article>
+  	<h2>Who?</h2>
+  	<p>Made by NL. Readings contributed by a squad of highly trained mystics...or some pals (who might be internet oracles. Just saying).</p>
   </article>
    
 {% endblock %}
