--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
 	<div class="wrapper">
 		<header>
 			<!-- header -->
-			<h1 class="logo"><a href="">Horriblescope</a></h1>
+			<h1 class="logo"><a href="http://horriblescope.herokuapp.com">Horriblescope</a></h1>
 			
 		</header>
 			<!-- content -->
