--- a/templates/main.html
+++ b/templates/main.html
@@ -2,21 +2,18 @@
 
 {% block content %}
  <article>
- 	<h2>What?</h2>
- 	<p>A twitter bot that tweets terrible horrorscopes at you.</p>
+ 	<h2>What is it?</h2>
+ 	<p>A twitter bot that tweets terrible, sarcastic, and cheeky, horrorscopes at you. You can visit <a href="http://twitter.com/horrible_scope" target="_blank">@horrible_scope</a> to try it out!</p>
+  </article>
+
+   <article>
+  	<h2>How To Use It?</h2>
+  	<p>Simply tweet something like: <em>"I would like a reading. I'm a Taurus"</em> at <a href="http://twitter.com/horrible_scope" target="_blank">@horrible_scope</a>. And it will answer you. You don't have to include your sign, but you can if you want. Your tweet however, must include the word <i>reading</i>, or the bot will get annoyed.</p>
   </article>
 
   <article>
-  	<h2>Why?</h2>
-  	<p>Why not? I'm sure a lot of internet oracles are getting tired of giving out readings.</p>
-  </article>
-
-  <article>How?</article>
-  <p>Simply tweet something like: "I would like a reading. I'm a Taurus" to [twitter link]. And horriblescope will answer you. </p>
-
-  <article>
-  	<h2>Who?</h2>
-  	<p>Made by NL. Readings contributed by a squad of highly trained mystics...or some pals (who might be internet oracles. Just saying).</p>
+  	<h2>Who Made It?</h2>
+  	<p>Made by <a href="http://nadinelessio.com">NL</a>. Readings contributed by a squad of highly trained oracles...or some darkly humoured pals (who might also be oracles. On the internet, no one is every really sure).</p>
   </article>
    
 {% endblock %}
