--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
   
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
-  <title>Title</title>
+  <title>Horriblescope</title>
 </head>
 <body id="home">
 	<div class="wrapper">
