--- a/templates/main.html
+++ b/templates/main.html
@@ -13,7 +13,7 @@
 
   <article>
   	<h2>Who Made It?</h2>
-  	<p>Made by <a href="http://nadinelessio.com">NL</a>. Readings contributed by a squad of highly trained oracles...or some darkly humoured pals (who might also be oracles. On the internet, no one is every really sure).</p>
+  	<p>Made by <a href="http://nadinelessio.com">NL</a>. Readings contributed by a squad of cranky oracles...or some darkly humoured pals (Who might also be oracles. On the internet, no one is ever really sure).</p>
   </article>
    
 {% endblock %}
